refactor: changed the file structure a bit and slightly reconfigured CMake

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 
+# VSCode Files
+.vscode
+
 # Visual Studio Files
 *.vcxproj
 *.vcxproj.filters
